--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # MySQL connection
 spring.datasource.url=jdbc:mysql://localhost:3306/jrtp?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.username=appuser
 spring.datasource.password=gaurav
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
